# text-book-generator

./: .cursorrules  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DECISIONS.md  FRONTEND_INTEGRATION_PROPOSAL_V3.md  FRONTEND_INTEGRATION_PROPOSAL_after PHASE 12 PROJECTS.md  Makefile  PIPELINE_IMPROVEMENTS_PROPOSAL_final touches.md  PROGRESS.md  README.md  docker-compose.yml  railway.toml  textbook-generator-v3-foundation-proposal.md  textbook-generator-v3-launch-readiness.md  textbook-generator-v3-proposal-2-executors (1).md  textbook-generator-v3-proposal-3-coherence-reviewer (1).md  textbook-generator-v3-proposal-4-frontend (2).md  textbook-generator-v3-proposal-5-model-config (2).md  v3-patchwork-comprehensive-form.md  v3-patchwork-form-reasoning-timeout.md  v3-patchwork-grades-loading-state.md  v3-patchwork-guided-concept-path.md  v3-patchwork-manifest-lenses (2).md  v3-patchwork-max-tokens (1).md  v3-patchwork-telemetry-wiring.md  v3-patchwork-thinking-type-error-surfacing (1).md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/contracts/: classification.json  compare-and-apply.json  component-examples.json  component-field-map.json  component-registry.json  component-schemas.json  concept-compact.json  diagram-led.json  formal-track.json  guided-concept-path.json  guided-discovery.json  interactive-lab.json  lectio-content-contract.json  low-load.json  manifest.json  open-canvas.json  preset-registry.json  print-rules.json  procedure.json  section-content-schema.json  timeline.json  visual-led.json
backend/resources/pack_specs/: assess.yaml  differentiate.yaml  introduce.yaml  practice.yaml  reteach.yaml
backend/resources/specs/: exit_ticket.yaml  mini_booklet.yaml  practice_set.yaml  quick_explainer.yaml  quiz.yaml  worksheet.yaml
backend/scripts/: migrate_sqlite_to_postgres.py  phase5_smoke.py
backend/src/: app.py
backend/src/builder/: __init__.py  routes.py
backend/src/contracts/: __init__.py  document.py  generation_manifest.py  lectio.py  section_content.py  section_content_helpers.py  template_contract.py
backend/src/core/: __init__.py  config.py  dependencies.py  errors.py  events.py  logging.py  pdf_export_runtime.py
backend/src/curriculum_enrichment/: __init__.py  models.py  prompts.py
backend/src/generation/: __init__.py  block_generate.py  block_generate_prompts.py  block_generate_routes.py  dependencies.py  failure.py  image_pipeline_health.py  logging.py  recovery.py  routes.py  service.py
backend/src/learning/: __init__.py  brief_types.py  interpreter.py  llm_config.py  models.py  pack_planner.py  pack_repository.py  pack_runner.py  pack_spec_loader.py  pack_spec_schema.py  prompts.py  routes.py
backend/src/media/: __init__.py
backend/src/pdf_export/: __init__.py  config.py  routes.py  schemas.py  service.py
backend/src/pipeline/: adapter.py  api.py  block_generate.py  console_diagnostics.py  contracts.py  events.py  graph.py  llm_runner.py  reporting.py  run.py  runtime_context.py  runtime_diagnostics.py  runtime_policy.py  runtime_progress.py  section_assets.py  section_content_helpers.py  state.py  visual_resolution.py
backend/src/planning/: __init__.py  dtos.py  fallback.py  llm_config.py  models.py  normalizer.py  plan_validator.py  prompt_builder.py  role_maps.py  routes.py  section_composer.py  service.py  template_scorer.py  visual_router.py
backend/src/resource_specs/: __init__.py  loader.py  renderer.py  schema.py
backend/src/telemetry/: __init__.py  dependencies.py  recorder.py  routes.py  service.py
backend/src/textbook_agent/: __init__.py
backend/src/v3_blueprint/: __init__.py  compiler.py  models.py  validators.py  work_orders.py
backend/src/v3_execution/: __init__.py  booklet_status.py  compile_orders.py  component_aliases.py  llm_helpers.py  models.py
backend/src/v3_review/: __init__.py  deterministic_checks.py  llm_review.py  models.py  prompts.py  repair_router.py  report_summary.py  reviewer.py  targets.py
backend/tests/: conftest.py  test_smoke_test_script.py
backend/tests/application/: test_file_generation_report_repo.py  test_generation_report_recorder.py  (+1 more)
(+939 files in other folders)
