[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textbook-agent"
version = "0.1.0"
description = "AI-agnostic pipeline that generates personalized textbooks from learner profiles"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "anthropic>=0.30.0",
    "openai>=1.35.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "google-auth>=2.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "requests>=2.32.5",
    "latex2mathml>=3.78.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "pyyaml>=6.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/textbook_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring real LLM API keys (deselected by default)",
]
addopts = "-m 'not integration'"

[tool.ruff]
src = ["src", "tests"]
line-length = 100
