[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textbook-agent"
version = "0.1.0"
description = "AI-agnostic pipeline that generates personalized textbooks from learner profiles"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.14.0",
    "anthropic>=0.30.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "google-auth>=2.29.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "langgraph>=0.2.0",
    "pydantic-ai>=0.0.30",
    "playwright>=1.54.0",
    "pypdf>=6.1.3",
    "reportlab>=4.4.4",
    "slowapi>=0.1.9",
    "google-cloud-storage>=3.10.1",
    "google-genai>=1.68.0",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.0",
    "aiosqlite>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/generation", "src/pipeline", "src/planning", "src/telemetry", "src/pdf_export"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring real LLM API keys (deselected by default)",
    "postgres: tests requiring a real PostgreSQL instance (deselected by default)",
]
addopts = "-m 'not integration and not postgres'"

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
